@startuml
'https://plantuml.com/class-diagram

!pragma layout smetana

class Main {
+ static void main (String [] args)

}

class BookingSystem {
- List<Room> roomList;
- List<Booking> bookingList;
- List<Room> availableRooms;


+ boolean isAvailable (Room room, LocalDateTime start, LocalDateTime end)
+ List <Room> findAvailable (int capacity, LocalDateTime start, LocalDateTime end)
+ Booking book (Room room, LocalDateTime start, LocalDateTime end, User user)
+ void cancel (Booking booking, User user)
}


class Booking {
- Room room
- User user
- LocalDateTime start
- LocalDateTime end
- int bookingId
- static in bookingIdCounter

}

class Room {
- String name
- int capacity

}

class User {
- List <Room> bookedRooms
- String name

}

Main *-- BookingSystem
BookingSystem *-- Booking
Booking *-- User
Booking *-- Room

@enduml